# spayd-applied

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CHANGES_SUMMARY.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  batch.html  copy-dist-to-docs.sh  d10_build.sh  d20_run.sh  d30_stop.sh  d40_logs.sh  docker-compose.yml  index.html  package.json  simple.html  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: API.md  BATCH.md  DEVELOPMENT.md  FIOFETCH.md  README.md  USER_GUIDE.md  batch.html  index.html  simple.html
docs/app/: batch.html  simple.html
docs/assets/: LanguageSwitcher-9953d2df.js  batch-1f648c18.js  batch-7029a6c0.css  batch-9731fefe.js  browser-11a39654.js  index-21545f7f.js  index-2e5ba812.js  index-59148202.js  index-6d4f144f.css  index-7563a4b0.css  index-d72c2d8d.css  index-dbde740d.js  index-ed49f02e.js  simple-b2ef867f.js  simple-c960d702.css
examples/: .gitignore  README.md  mk.py
fio_fetch_py/: CHANGES.md  ISSUE_TRANSACTIONS.md  README.md  REFACTORING_TOKEN_MASKING.md  RENAMING_SUMMARY.md  back_date_days_SETUP.md  pyproject.toml
fio_fetch_py/examples/: tr.json
fio_fetch_py/fiofetch/: __main__.py  api.py  config.py  database.py  fio.py  main.py  models.py  services.py  utils.py
fio_fetch_py/static/: index.html
fio_fetch_py/tests/: conftest.py  test_async.py  test_mock.py
fio_fetch_webui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: I18nContext.tsx  app.css  app.tsx  batch.css  batch.tsx  db.ts  index.css  main.tsx  react-shim.d.ts  test.ts
src/batch/: BatchApp.tsx
(+55 files in other folders)
